src/ui/snapshots/settl__ui__snapshot_tests__title_screen_blink_off.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&buf)
---



























                                                                ███████╗███████╗████████╗████████╗██╗
                                                                ██╔════╝██╔════╝╚══██╔══╝╚══██╔══╝██║
                                                                ███████╗█████╗     ██║      ██║   ██║
                                                                ╚════██║██╔══╝     ██║      ██║   ██║
                                                                ███████║███████╗   ██║      ██║   ███████╗
                                                                ╚══════╝╚══════╝   ╚═╝      ╚═╝   ╚══════╝


                                                                             terminal settlers
