src/ui/snapshots/settl__ui__snapshot_tests__title_small_terminal.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&buf)
---






                   ███████╗███████╗████████╗████████╗██╗
                   ██╔════╝██╔════╝╚══██╔══╝╚══██╔══╝██║
                   ███████╗█████╗     ██║      ██║   ██║
                   ╚════██║██╔══╝     ██║      ██║   ██║
                   ███████║███████╗   ██║      ██║   ███████╗
                   ╚══════╝╚══════╝   ╚═╝      ╚═╝   ╚══════╝


                                terminal settlers

                             Press any key to start
